# adi_screen

./: .gitmodules  Cargo.toml  README.md  readme.md
examples/: demo.rs  tutorial.rs
src/: gpu_data.rs  gui.rs  lib.rs  prelude.rs  sprite.rs  style.rs  texture.rs  window.rs
src/footile/: fig.rs  imgbuf.c  imgbuf.rs  mask.rs  mod.rs  plotter.rs  raster.rs
src/gui/: button.rs  mod.rs  text.rs
src/window/: mod.rs  surface.rs
