# "adi_screen" - Aldaron's Device Interface / Screen
#                             _        _
#                            /@\——————/@\
# .———  .                   |   o    o   |     .————      .            .
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   .
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   |
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |
#                 |        \              /                              __/
#                           ¯————————————¯
#
# Copyright Jeron A. Lau 2017 - 2018.
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "adi_screen"
version = "0.11.0"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>",
]
license = "BSL-1.0"
documentation = "https://docs.rs/adi_screen"
homepage = "https://plopgrizzly.com/adi_screen"
repository = "https://github.com/plopgrizzly/adi_screen"
readme = "readme.md"
description = "Interface with a computer/phone screen screen to render graphics."
keywords = [ "vulkan", "graphics", "gui", "hardware", "rendering" ]
categories = ["gui", "game-engines", "hardware-support", "multimedia::video",
	"rendering::graphics-api"]

[dependencies]
adi_clock = "0.3"
adi_gpu = "0.9"
aci_png = "0.6"
fonterator = "0.1"
